--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -1726,7 +1726,7 @@ jobs:
               --parameters inputKeyvaultResourcegroup="${{ env.admin_bicep_kv_fw_rg }}" \
               --parameters inputKeyvaultSubscription="${{ env.admin_bicep_input_keyvault_subscription }}" \
               --parameters projectServicePrincipleOID_SeedingKeyvaultName="${{ env.project_service_principal_OID_seeding_kv_name }}" \
-              --parameters useAdGroups="${{ env.use_ad_groups }}" \
+              --parameters useAdGroups="${{ env.use_groups }}" \
               --parameters disableAgentNetworkInjection="${{ env.disableAgentNetworkInjection }}" \
               --parameters enableAIFactoryCreatedDefaultProjectForAIFv2="${{ env.enableAIFactoryCreatedDefaultProjectForAIFv2 }}" \
               --parameters containerAppsEnvExists="${{ env.containerAppsEnvExists }}" \
@@ -1821,7 +1821,7 @@ jobs:
               --parameters inputKeyvaultResourcegroup="${{ env.admin_bicep_kv_fw_rg }}" \
               --parameters inputKeyvaultSubscription="${{ env.admin_bicep_input_keyvault_subscription }}" \
               --parameters projectServicePrincipleOID_SeedingKeyvaultName="${{ env.project_service_principal_OID_seeding_kv_name }}" \
-              --parameters useAdGroups="${{ env.use_ad_groups }}" \
+              --parameters useAdGroups="${{ env.use_groups }}" \
               --parameters disableAgentNetworkInjection="${{ env.disableAgentNetworkInjection }}" \
               --parameters enableAIFactoryCreatedDefaultProjectForAIFv2="${{ env.enableAIFactoryCreatedDefaultProjectForAIFv2 }}" \
               --parameters containerAppsEnvExists="${{ env.containerAppsEnvExists }}" \
